--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,8 @@ include_directories(${OPENGL_INCLUDE_DIRS})
 
 include_directories(include)
 
+add_subdirectory(lib/glad)
+
 set(GLFW_BUILD_DOCS_OFF CACHE BOOL "GLFW lib only")
 set(GLFW_INSTALL OFF CACHE BOOL "GLFW lib only")
 
@@ -16,12 +18,12 @@ if (MSVC)
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS /ENTRY:mainCRTStartup")
 endif()
 
-set(SRC_FILES glad.c src/main.cpp src/GLFWContextManager.cpp src/GLProgram.cpp src/VertexBuffer.cpp src/Renderer.cpp src/ShaderFactory.cpp)
+set(SRC_FILES src/main.cpp src/GLFWContextManager.cpp src/GLProgram.cpp src/VertexBuffer.cpp src/Renderer.cpp src/ShaderFactory.cpp)
 add_executable(${PROJECT_NAME} WIN32 ${SRC_FILES})
 #add_library(glad glad.c glad.h)
 
 link_directories(${CMAKE_CURRENT_SOURCE_DIR}/lib/glfw)
-target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} glfw)
+target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} glfw glad)
 
 if (MSVC)
     set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
