Minor changes; add VertexBuilder

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ if (MSVC)
     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS /ENTRY:mainCRTStartup")
 endif()
 
-set(SRC_FILES src/main.cpp src/GLFWContextManager.cpp src/GLProgram.cpp src/VertexBuffer.cpp src/Renderer.cpp src/ShaderFactory.cpp)
+set(SRC_FILES src/main.cpp src/GLFWContextManager.cpp src/GLProgram.cpp src/VertexArrayBuffer.cpp src/Renderer.cpp src/ShaderFactory.cpp src/VertexBuilder.cpp)
 add_executable(${PROJECT_NAME} WIN32 ${SRC_FILES})
 #add_library(glad glad.c glad.h)
 
