Migrate to SDL3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.20)
+cmake_minimum_required(VERSION 3.5)
 project(geoviz)
 
 find_package(OpenGL REQUIRED)
@@ -8,16 +8,12 @@ include_directories(include)
 
 add_subdirectory(lib/glad)
 add_subdirectory(lib/glm)
-
-set(GLFW_BUILD_DOCS_OFF CACHE BOOL "GLFW lib only")
-set(GLFW_INSTALL OFF CACHE BOOL "GLFW lib only")
-
-add_subdirectory(lib/glfw)
+add_subdirectory(lib/SDL)
 
 set(
     SRC_FILES
     src/main.cpp
-    src/GLFWContextManager.cpp
+    src/SDLContextManager.cpp
     src/GLProgram.cpp
     src/VertexArrayBuffer.cpp
     src/Renderer.cpp
@@ -30,4 +26,4 @@ set(
 )
 add_executable(${PROJECT_NAME} ${SRC_FILES})
 
-target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} glfw glad glm)
+target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} SDL3::SDL3 glad glm)
