Dirty refactor separating vertices/indices from rendering

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,7 @@ add_subdirectory(lib/SDL)
 set(
     SRC_FILES
     src/main.cpp
+    src/core/Geoviz.cpp
     src/core/SDLContextManager.cpp
     src/core/GLProgram.cpp
     src/core/VertexArrayBuffer.cpp
