Refactor GeomodelPool out of existence

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,8 @@ set(
     src/core/IndexBuffer.cpp
     src/core/VertexIndexMediator.cpp
     src/core/ShaderFile.cpp
-    src/core/GeomodelPool.cpp
     src/primitives/PrimitiveBuilder.cpp
+    src/core/Geomodel.cpp
 )
 add_executable(${PROJECT_NAME} ${SRC_FILES})
 
