Decouple vertex array objects and vertex buffers; migrate to DSA

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_STANDARD 20)
 find_package(OpenGL REQUIRED)
 include_directories(${OPENGL_INCLUDE_DIRS})
 
+
 include_directories(include)
 
 add_subdirectory(lib/glad)
@@ -21,15 +22,21 @@ set(
     src/core/SDLContext.cpp
     src/core/SDLContextLogic.cpp
     src/core/GLProgram.cpp
-    src/core/VertexArrayBuffer.cpp
+    src/core/VertexArrayObject.cpp
+    src/core/VertexBuffer.cpp
     src/core/Renderer.cpp
     src/core/ShaderFactory.cpp
     src/core/IndexBuffer.cpp
-    src/core/VertexIndexMediator.cpp
     src/core/ShaderFile.cpp
     src/primitives/PrimitiveBuilder.cpp
     src/core/Geomodel.cpp
 )
+
+if(CMAKE_BUILD_TYPE STREQUAL "Debug")
+    add_definitions(-DDEBUG_WITH_GDB)
+endif()
+
+#src/core/VertexIndexMediator.cpp
 add_executable(${PROJECT_NAME} ${SRC_FILES})
 
 target_link_libraries(${PROJECT_NAME} ${OPENGL_LIBRARIES} SDL3::SDL3 glad glm CLI11::CLI11)
